--- a/css/styles.css
+++ b/css/styles.css
@@ -281,6 +281,8 @@ address {
   width: 270px;
   background: #ffffff;
   border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-item:last-child {
@@ -413,7 +415,6 @@ address {
 }
 
 .portfolio-list-btn-item {
-  display: inline;
   margin-right: 8px;
   margin-bottom: 50px;
 }
@@ -430,6 +431,7 @@ address {
   cursor: pointer;
   padding: 6px 22px;
   border: 0px;
+  border-radius: 4px;
 }
 
 .filter-btn:last-child {
@@ -440,17 +442,32 @@ address {
 .filter-btn:focus {
   color: #ffffff;
   background: var(--logo-focus-hover-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-hero-item {
+  display: block;
   width: 370px;
-  border: 1px solid #eeeeee;
+}
+
+.portfolio-card-link {
+  display: block;
+}
+
+.portfolio-card-link:hover,
+.portfolio-card-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .hero-content-portfolio {
   display: flex;
   flex-direction: column;
   padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
 }
 
 .hero-content {
@@ -473,7 +490,7 @@ address {
 }
 
 .footer-logo {
-  width: 145px;
+  min-width: 145px;
   color: #ffffff;
 }
 
@@ -486,8 +503,6 @@ address {
 }
 
 .footer-logo:focus {
-  display: flex;
-  min-width: 145px;
   color: var(--logo-focus-hover-color);
 }
 
@@ -514,18 +529,17 @@ address {
 
 .container-footer {
   display: flex;
-  flex-direction: column;
+  align-items: baseline;
 }
 
-.fotter-container-item {
-  display: flex;
-  gap: 70px;
-}
+/* .footer-container-logo-address {
+  display: block;
+} */
 
 .container-footer-soc {
-  justify-content: center;
-  max-width: 206px;
+  min-width: 206px;
   height: 80px;
+  padding-left: 70px;
 }
 
 .footer-soc-title {
